Fix icon alignment in New Message button

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,6 +28,11 @@
   text-decoration: none;
 }
 
+.button.new-message .icon {
+  padding-top: 2px;
+  vertical-align: top;
+}
+
 /* Message board styles */
 .msg-board {
   padding-top: 12px;
